# htw-datalab

./: .gitignore  pyproject.toml
src/htw_datalab/data/: twits.csv
src/htw_datalab/etl/: collect_data.py  main.py
src/htw_datalab/prompt/: main.py
