[project]
authors = [{name = "FidFenix", email = "fidel1forever@gmail.com"}]
dependencies = ["ollama>=0.6.0,<0.7"]
name = "htw-datalab"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
htw_datalab = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python ./src/htw_datalab/prompt/main.py"
etl = "python ./src/htw_datalab/etl/main.py"

[tool.pixi.dependencies]
python = "3.10.*"
python-dotenv = ">=1.1.1,<2"
tweepy = ">=4.16.0,<5"
pandas = ">=2.3.3,<3"
